<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">

<group
    android:checkableBehavior="single"
    android:id="@+id/group1">
    <item
        android:id="@+id/nav_index"
        android:checked="true"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/nav_index" />
    <item
        android:id="@+id/nav_msg"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/nav_msg" />
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/nav_user" />
</group>

<group
    android:checkableBehavior="none"
    android:id="@+id/group2">
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/nav_share" />
</group>
<item android:title="@string/action_settings">
    <menu>
        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_set" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_exit" />
    </menu>
</item>
</menu>

